# prism-eda

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: implementation-plan.md  implementation-status.md  maintainer-guide.md  product-research-brief.md  public-api-and-architecture.md  schema-discovery.md
docs/design/: report-builder.md
docs/usage_docs/: README.md  ai-assisted-analysis.md  anomaly-detection.md  classification.md  context-and-config.md  events-and-progress.md  exporting-reports.md  extending-prism.md  getting-started.md  image-datasets.md  installation.md  loading-data.md  privacy.md  profile.md  results-and-evidence.md  schema-discovery.md
examples/: sample_data.py
scripts/: fetch_cytoscape.py
src/prism_eda/: __init__.py  _serialization.py  api.py  artifacts.py  config.py  dataset.py  events.py  exceptions.py  image_dataset.py  results.py
src/prism_eda/analysis/: __init__.py  anomaly.py  classification.py  image_profile.py  profile.py  schema_discovery.py
src/prism_eda/assisted_analysis/: __init__.py  graph.py  interpretation.py  investigator.py  state.py  tools.py
src/prism_eda/assisted_analysis/providers/: __init__.py  _protocol.py  base.py  fake.py  gemini.py
src/prism_eda/catalog/: __init__.py  fingerprints.py  loaders.py  models.py  profiling.py  relationships.py
src/prism_eda/evidence/: __init__.py  models.py
src/prism_eda/privacy/: __init__.py  models.py
src/prism_eda/reporting/: __init__.py  charts.py  renderer.py
src/prism_eda/reporting/assets/: README.md
src/prism_eda/reporting/templates/: _erd_cytoscape.html  _erd_fallback.html  _erd_section.html  report.html
src/prism_eda/transformations/: __init__.py  models.py
tests/: test_assisted_analysis.py  test_edge_cases.py  test_exports.py  test_goal_recipes.py  test_image_profile.py  test_loaders.py  test_privacy.py  test_profile.py  test_schema_discovery.py  test_signal_quality.py
