[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n-eda"
version = "0.1.0"
description = "An advanced automated profiling and eda library for any find of data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Khushal Thanvi", email = "khushalthanvi3@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# These are the core packages installed when someone pip installs your library
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",    # For out-of-the-box anomaly detection (e.g., Isolation Forest)
    "matplotlib>=3.7.0",      # For plotting
    "seaborn>=0.13.0",        # For statistical data visualization
    "jinja2>=3.1.0",          # Essential if you plan to generate HTML reports
    "tqdm>=4.65.0",           # For progress bars on large datasets
]

[project.urls]
Homepage = "https://github.com/NamahaTech/n-eda"
#Documentation = "https://github.com/yourusername/data-insight-pro/wiki"
#Issues = "https://github.com/yourusername/data-insight-pro/issues"

# Optional dependencies for users who want extra features, or for your own dev/testing
[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",            # Blazing fast modern linter/formatter
    "mypy>=1.9.0",            # Static type checking
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",      # Test coverage reports
]
# E.g., user runs: pip install data-insight-pro[advanced]
advanced = [
    "pyod>=1.1.0",            # Python Outlier Detection library for deep-learning anomaly detection
    "plotly>=5.18.0",         # For interactive HTML charts
]

# Tool configurations
[tool.hatch.build.targets.wheel]
packages = ["src/data_insight_pro"] # Assuming you use a 'src' layout (highly recommended)

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"] # Enable standard errors, formatting, and import sorting