[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism-eda"
version = "0.1.0"
description = "Task-aware exploratory data analysis with optional AI assistance."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Khushal Thanvi", email = "khushalthanvi3@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# These are the core packages installed when someone pip installs your library
dependencies = [
    "jinja2>=3.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/NamahaTech/prism-eda"
Documentation = "https://github.com/NamahaTech/prism-eda/tree/main/docs"
Issues = "https://github.com/NamahaTech/prism-eda/issues"

# Optional dependencies for users who want extra features, or for your own dev/testing
[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "hatchling>=1.25.0",
    "mypy>=1.11.0",
    "ruff>=0.3.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
plotly = [
    "plotly>=5.18.0",
]
excel = [
    "openpyxl>=3.1.0",
]
ai-gemini = [
    "langgraph>=1.0.0",
    "langchain-core>=1.0.0",
    "google-genai>=1.0.0",
]

# Tool configurations
[tool.hatch.build.targets.wheel]
packages = ["src/prism_eda"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
# Lets the suite import examples/sample_data.py, so the datasets the usage docs
# are written against are the datasets the tests actually assert on.
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["prism_eda"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "sklearn.*",
    "langgraph.*",
    "google.*",
]
ignore_missing_imports = true
